--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
    </div>
    <div id="myid" style="background-color: #0b0b50; color: #fff; height:50px;">
-     <p>copyright&copy;2020 || Created By Md Mijanur Mijanur</p>
+     <p>copyright&copy;2020 || Created By  Mijanur </p>
    </div>
   </footer>
 
